Imagination changelog

xx/xx/19 - 3.5		- Finally got rid of those annoying black borders around image.
			- Fixed seg-fault when quitting.

18/12/18 - 3.4		- Subtitle info are no more saved in the project file if the slide hasn't any text.
			- Starting the preview from the middle plays music accordingly to its timing in the slideshow.
			- Project can be ported to other media as filenames can be saved without their path.
			- Subtitle can be now rotated.
			- Subtitle can now be freely positioned on the slide.
			- Added a nice fading gradient animation in the Add/Edit slide dialog.
			- Fixed seg-fault when trying to delete a slide when preview is running.
			- Current slideshow is no more closed if user cancels when opening a new one.
			- Enjoy FULLSCREEN preview with background music and continuos mode. WOOOOOOOOOOW !!!
			- The CTRL+A shortcut doesn't select all the slides anymore when pressed from the subtitle widget entry.
			- Subtitles can now have a pattern.
			- Empty slide background can now be edited.
			- Subtitle can have a background.
			- Got rid of Update button in the Slide Motion as it's now automatic.
			- Got rid of subtitle placing option.
			- Moved Add and Remove buttons in the Slide Motion on the right.
14/10/18 - 3.1:
			- Export is now much faster than 3.0!
			- Ending the slideshow with a blank slide with the same transition applied to the first one is now optional.
			- Added an elapsed time information in the Export dialog.
			- Made the slides to be selected during the preview/export and their number shown on the menu bar.
			- Fixed seg-fault when trying to rotate gradient/text slides.
			- Current slideshow is not closed anymore when clicking ok/cancel in the properties/new slideshow dialog.
			- Slide duration can be finally set to less than a second. That was a long requested feature!
			- Added patch from Giovanni Mariani to fix ffmpeg cmd line error when producing VOB.