@@ -35,13 +35,6 @@ void img_add_slides_thumbnails(GtkMenuItem *,img_window_struct *);
 void img_remove_audio_files (GtkWidget *, img_window_struct *);
 void img_remove_foreach_func (GtkTreeModel *, GtkTreePath *, GtkTreeIter *, GList **);
 void img_delete_selected_slides(GtkMenuItem *,img_window_struct *);
-void
-img_rotate_slides_left( GtkWidget         *widget,
-						img_window_struct *img );
-
-void
-img_rotate_slides_right( GtkWidget         *widget,
-						 img_window_struct *img );
 void img_show_about_dialog (GtkMenuItem *,img_window_struct *);
 void img_start_stop_preview(GtkWidget *, img_window_struct *);
 void img_go_fullscreen(GtkMenuItem *, img_window_struct *);
@@ -134,11 +127,6 @@ img_load_window_settings( img_window_struct *img );
 
 void
 img_set_window_default_settings( img_window_struct *img );
-
-void
-img_rotate_slide( slide_struct   *slide,
-				  ImgAngle        angle,
-				  GtkProgressBar *progress );
 
 void
 img_notebook_switch_page (GtkNotebook       *notebook,
