@@ -392,7 +392,7 @@ img_start_export( img_window_struct *img )
 	}
 	else
 	{
-		img_scale_image( entry->r_filename, img->video_ratio,
+		img_scale_image( entry->o_filename, img->video_ratio,
 						 0, 0,
 						 img->background_color, NULL, &img->image2 );
 	}
@@ -655,7 +655,8 @@ img_prepare_pixbufs( img_window_struct *img)
 								img->video_size[0],
 								img->video_size[1], NULL, &img->image2 );
 		}
-		img_scale_image( img->work_slide->r_filename, img->video_ratio,
+		else
+			img_scale_image( img->work_slide->o_filename, img->video_ratio,
 							 0, img->video_size[1],
 							 img->background_color, NULL, &img->image2 );
 
