@@ -45,15 +45,6 @@
  * Subtitles related definitions
  * ************************************************************************* */
 
-typedef enum
-{
-	ANGLE_0 = 0,
-	ANGLE_90,
-	ANGLE_180,
-	ANGLE_270
-}
-ImgAngle;
-
 /*
  * TextAnimationFunc:
  * @cr: cairo context that should be used for drawing
@@ -138,8 +129,6 @@ struct _slide_struct
 
 	/* Fields that are filled when we load slide from disk */
 	gchar    *o_filename; /* Filename of the image that slide represents */
-	gchar    *r_filename; /* o_filename, rotated according to angle */
-	ImgAngle  angle;      /* Angle of rotated image */
     gboolean  load_ok;    /* handle loading problems (file not found, format unknown...) */
     gchar    *original_filename; /* Filename as loaded from the project file */
 
