@@ -462,9 +462,6 @@ img_set_slide_file_info( slide_struct *slide,
 	format = gdk_pixbuf_get_file_info( filename, &width, &height );
 
 	slide->o_filename = g_strdup( filename );
-	slide->r_filename = g_strdup( filename );
-	slide->angle = 0;
-	
 	slide->resolution = g_strdup_printf( "%d x %d", width, height );
 	slide->type = gdk_pixbuf_format_get_name( format );
 }
@@ -620,11 +617,7 @@ img_free_slide_struct( slide_struct *entry )
 {
 	GList *tmp;
 
-	if( entry->angle != ANGLE_0 )
-		g_unlink( entry->r_filename );
-
 	g_free(entry->o_filename);
-	g_free(entry->r_filename);
 	g_free(entry->resolution);
 	g_free(entry->type);
 
